--- a/project_1/html_1.html
+++ b/project_1/html_1.html
@@ -3,10 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Nur Jahan Smrity"/>
     <title>1st Project</title>
-    <link rel="stylesheet" href="styles/style_1.css"
+    <!-- ctrl+/ = to comment -->
+    <link rel="stylesheet" href="styles/style_1.css"/>
+    <link rel="shortcut icon" href="images/favicon_1.webp" type="image/x-icon"/>
+
 </head>
 <body>
-    <h1 class="hi">hello world</h1>
+    <div class="first">
+        <h1>Traveling Blog </h1>
+    </div>
+    <!-- content , padding , border , margin -->
+    <div class="article">
+        <h2>My Traveling Blog</h2>
+        <p>Hello everyone .</p>
+        <p>This is my <span class="im">Traveling Blog</span> website where I will share with you about all my traveling experience which I have already visited . Here I will try to share with you my whole experience about how was the trip , how much does it cost , how did I traveled and many more suggestions . Hope you all will like it and hope it will help you to select your next traveling destination . </p>
+    </div>
 </body>
 </html>
