added travel pictures and added diferent features in it

--- a/project_1/html_1.html
+++ b/project_1/html_1.html
@@ -20,5 +20,22 @@
         <p>Hello everyone .</p>
         <p>This is my <span class="im">Traveling Blog</span> website where I will share with you about all my traveling experience which I have already visited . Here I will try to share with you my whole experience about how was the trip , how much does it cost , how did I traveled and many more suggestions . Hope you all will like it and hope it will help you to select your next traveling destination . </p>
     </div>
+    <div id="visited_place">
+        <h2>Visited Places</h2>
+        <div class="travel-pic">
+            <div>
+                <img src="https://img.freepik.com/premium-photo/view-from-maafushi-island-kaafu-atoll-maldives_137125-773.jpg"/>
+            </div>
+            <div>
+                <img src="images/hulhumale.jpg"/>
+            </div>
+            <div>
+                <img src="images/mafushi_1.jpg"/>
+            </div>
+            <div>
+                <img src="images/male_mafushi_1.webp"/>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
