--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
                 <h3>Lets enjoy the tour video</h3>
                 <video controls width="200px" src="assets/media/tour_video.mp4"></video>
             </div>
+            <div>
+                <h3>Lets make some cakes</h3>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/2XBvw_Ty-C0?si=xXR1tQ1r0sztEyk1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
         </div>
     </div>
 </body>
